# flight_margin_calculator

./: CMakeLists.txt  README.md
config/: flight_margin.yaml
include/flight_margin/: flight_margin.hh  flight_plotter.hh  wind.hh
include/matplotlib/: matplotlib.hh
include/util/: conversion.hh  semivariogram.hh
src/: flight_margin.cc  flight_plotter.cc  semivariogram.cc  wind.cc
test/: flight_margin_test.cc
test/config/: small_scale_flight_margin.yaml
